--- a/conf/specific_genes_template.config
+++ b/conf/specific_genes_template.config
@@ -8,11 +8,9 @@
 * files that you get matching the prefix!
 */
 params.reads = "../testdata/fastq_files/*L00{1,2}_R{1,2}_001.fastq.gz"
-params.file_ending = ".fastq.gz"
 params.setsize = 2
 //  Specify the name of the output directory, relative to where the script is being run
 params.out_dir = "track_two"
-
 
 // General configuration variables
 params.pwd = "$PWD"
@@ -20,10 +18,8 @@ params.help = false
 
 params.threads = 1
 
-// Collected raw data
-params.raw_data = "raw_data"
-
 // Ariba mlst params
+params.do_mlst = "yes"
 //params.mlst_scheme = "Escherichia coli#1"
 params.mlst_scheme = "Campylobacter jejuni"
 params.mlst_results = "mlst_results"
@@ -31,10 +27,12 @@ params.mlst_results = "mlst_results"
 
 // Ariba AMR params
 // Check the ariba webpage for legal values
+params.do_amr = "yes"
 params.amr_db = "card"
 params.amr_results = "amr_results"
 
 // Ariba virulence params
 // Check the ariba webpage for legal values
+params.do_vir = "yes"
 params.vir_db = "vfdb_core"
 params.vir_results = "vir_results"
