--- a/conf/specific_genes_template.config
+++ b/conf/specific_genes_template.config
@@ -15,6 +15,7 @@ params.out_dir = "track_two"
 // General configuration variables
 params.pwd = "$PWD"
 params.help = false
+params.savemode = "copy"
 
 params.threads = 1
 
